2017-08-07  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/81736
	* config/i386/i386.c (ix86_finalize_stack_realign_flags): Renamed
	to ...
	(ix86_finalize_stack_frame_flags): This.  Also clear
	frame_pointer_needed if -fno-omit-frame-pointer is used without
	stack access.
	(ix86_expand_prologue): Replace ix86_finalize_stack_realign_flags
	with ix86_finalize_stack_frame_flags.
	(ix86_expand_epilogue): Likewise.
	(ix86_expand_split_stack_prologue): Likewise.

2017-08-07  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/81743
	* config/i386/i386.c (get_builtin_code_for_version): Set priority
	to P_AES for Westmere.

2017-08-07  Jonathan Yong  <10walls@gmail.com>

	* config/i386/mingw.opt (fset-stack-executable): Removed.
	* config/i386/cygming.opt (fset-stack-executable): Moved
	from mingw.opt.
	* config/i386/cygwin.h: Define CHECK_EXECUTE_STACK_ENABLED.

2017-08-07  Segher Boessenkool  <segher@kernel.crashing.org>

	* print-rtl.c (print_exp): Print NOT as "~" instead of as "!".

2017-08-07  Marek Polacek  <polacek@redhat.com>

	PR middle-end/81737
	* fold-const.c (fold_indirect_ref_1): Check type_domain.

2017-08-07  Martin Liska  <mliska@suse.cz>

	* attribs.h (canonicalize_attr_name): New function.
	(cmp_attribs): Move from c-format.c and adjusted.
	(is_attribute_p): Moved from tree.h.
	* tree-inline.c: Add new includes.
	* tree.c (cmp_attrib_identifiers): Use cmp_attribs.
	(private_is_attribute_p): Remove.
	(private_lookup_attribute): Likewise.
	(private_lookup_attribute_by_prefix): Simplify.
	(remove_attribute): Use is_attribute_p.
	* tree.h: Remove removed declarations.

2017-08-07  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/81698
	* stmt.c (emit_case_dispatch_table): Add DEFAULT_EDGE argument,
	instead of computing it in the function.  Formatting fix.
	(expand_case): Don't rely on default_edge being the first edge,
	clear it if removing it, pass default_edge to
	emit_case_dispatch_table.
	(expand_sjlj_dispatch_table): Pass NULL as DEFAULT_EDGE, formatting
	fix.