@@ -1,5 +1,12 @@
 2017-08-07  H.J. Lu  <hongjiu.lu@intel.com>
 
+	* gcc.target/i386/pr81736-1.c: Removed.
+	* gcc.target/i386/pr81736-2.c: Likewise.
+	* gcc.target/i386/pr81736-3.c: Likewise.
+	* gcc.target/i386/pr81736-4.c: Likewise.
+
+2017-08-07  H.J. Lu  <hongjiu.lu@intel.com>
+
 	PR target/81736
 	* gcc.target/i386/pr81736-1.c: New test.
 	* gcc.target/i386/pr81736-2.c: Likewise.
